[tool.poetry]
name = "cdn-mgr"
version = "0.1.0"
description = ""
authors = ["lukasthaler <33826427+lukasthaler@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiofiles = "^23.2.1"
opencv-python = "^4.9.0.80"
opencv-contrib-python = "^4.9.0.80"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
