[project]
requires-python = ">= 3.12"

[tool.poetry]
package-mode = false
name = "cdn-mgr"
version = "0.1.0"
description = ""
authors = ["lukasthaler <33826427+lukasthaler@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12, <3.14"
aiofiles = "^24.1.0"
opencv-python = "^4.10.0.82"
opencv-contrib-python = "^4.10.0.82"
triggers = {git = "https://github.com/leagueutils/async-triggers.git"}
leagueutils = {version = "^0.0.2", source = "lu-private"}

[[tool.poetry.source]]
name = "lu-private"
url = "http://localhost:3141/packages/stable/+simple/"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "C901",  # too complex
]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.isort]
section-order = ["future", "standard-library", "third-party", "lu", "first-party", "local-folder"]

[tool.ruff.isort.sections]
lu = ["leagueutils", "triggers"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"
